--- a/homework/hw2-goals-approaches/ez/readme.ipynb
+++ b/homework/hw2-goals-approaches/ez/readme.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "509a8b89",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "4787010c",
    "metadata": {},
    "outputs": [
@@ -186,14 +186,14 @@
        "4       4980.0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "(pd.read_feather('../../data/mtg.feather')# <-- will need to change for your notebook location\n",
+    "(pd.read_feather('../../../data/mtg.feather')\n",
     " .head()[['name','text', 'mana_cost', 'flavor_text','release_date', 'edhrec_rank']]  \n",
     ")"
    ]
