--- a/homework/hw2-goals-approaches/readme.ipynb
+++ b/homework/hw2-goals-approaches/readme.ipynb
@@ -25,9 +25,7 @@
     "In fact, you will likely be unable to create a set of ML algorithms that \"beat\" something others have spent 100's of hours creating, optimizing, and validating. \n",
     "However, to answer the three questions above, we need a way to explicitly track our decisions to use others' work, and efficiently _swap out_ that work for new ideas and directions as the need arises. \n",
     "\n",
-    "This homework is a \"part 1\" of sorts, where you will construct several inter-related pipelines in a way that will allow _much easier_ adjustment, experimentation, and measurement in \"part 2\"\n",
-    "\n",
-    "\n"
+    "This homework is a \"part 1\" of sorts, where you will construct several inter-related pipelines in a way that will allow _much easier_ adjustment, experimentation, and measurement in \"part 2\""
    ]
   },
   {
@@ -51,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "509a8b89",
    "metadata": {},
    "outputs": [
@@ -59,8 +57,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Everything is up to date.                                                       \n",
-      "\u001b[0m"
+      "A       ..\\..\\data\\mtg.feather\n",
+      "A       ..\\..\\data\\shakespeare.txt\n",
+      "D       shakespeare.txt\n",
+      "2 files added, 1 file deleted and 1 file fetched\n"
      ]
     }
    ],
@@ -203,7 +203,7 @@
    "id": "ce2e06cf",
    "metadata": {},
    "source": [
-    "But that's not all --- at the end of this homework, we will be able to run a `dvc repro` command and all of our main models and results will be made available for your _notebook_ to open and display. "
+    "But that's not all --- at the end of this homework, we will be able to run a `dvc repro` command and all of our main models and results will be made available for your _notebook_ to open and display."
    ]
   },
   {
@@ -218,7 +218,7 @@
     "    - your \"lab notebook\", as an **`.ipynb` or `.md`** (e.g. jupytext), that will be exported to PDF for Canvas submission. **This communicates your _goals_**, along with the results that will be compared to them. \n",
     "    - your **`dvc.yaml`** file that will define  the inputs and outputs of your _approaches_. See [the DVC documentation](https://dvc.org/doc/user-guide/project-structure/pipelines-files) for information!\n",
     "    - **source code** and **scripts** that define the preprocessing and prediction `Pipeline`'s you wish to create. You may then _print_ the content of those scripts at the end of your notebook e.g. as appendices using \n",
-    "- any updates to `environment.yml` to add the dependencies you want to use for this homework\n"
+    "- any updates to `environment.yml` to add the dependencies you want to use for this homework"
    ]
   },
   {
@@ -259,9 +259,7 @@
     "- in your notebook: \n",
     "    - Describe:  preprocessing steps (the tokenization done, the ngram_range, etc.), and why. \n",
     "    - load both models and plot the _confusion matrix_ for each model ([see here for the multilabel-specific version](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.multilabel_confusion_matrix.html))\n",
-    "    - Describe: what are the models succeeding at? Where are they struggling? How do you propose addressing these weaknesses next time?\n",
-    "\n",
-    "\n"
+    "    - Describe: what are the models succeeding at? Where are they struggling? How do you propose addressing these weaknesses next time?"
    ]
   },
   {
@@ -280,24 +278,18 @@
     "    - What data did you use from the original dataset? How did you proprocess it? \n",
     "    - Can we see the importance of those features? e.g. logistic weights? \n",
     "    \n",
-    "How did you do? What would you like to try if you had more time? \n"
+    "How did you do? What would you like to try if you had more time?"
    ]
   }
  ],
  "metadata": {
   "jupytext": {
-   "formats": "ipynb,md:myst",
-   "text_representation": {
-    "extension": ".md",
-    "format_name": "myst",
-    "format_version": 0.13,
-    "jupytext_version": "1.11.5"
-   }
+   "formats": "ipynb,md:myst"
   },
   "kernelspec": {
-   "display_name": "Python [conda env:text-data-class]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-text-data-class-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -309,7 +301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
