--- a/homework/hw2-goals-approaches/readme.ipynb
+++ b/homework/hw2-goals-approaches/readme.ipynb
@@ -25,9 +25,7 @@
     "In fact, you will likely be unable to create a set of ML algorithms that \"beat\" something others have spent 100's of hours creating, optimizing, and validating. \n",
     "However, to answer the three questions above, we need a way to explicitly track our decisions to use others' work, and efficiently _swap out_ that work for new ideas and directions as the need arises. \n",
     "\n",
-    "This homework is a \"part 1\" of sorts, where you will construct several inter-related pipelines in a way that will allow _much easier_ adjustment, experimentation, and measurement in \"part 2\"\n",
-    "\n",
-    "\n"
+    "This homework is a \"part 1\" of sorts, where you will construct several inter-related pipelines in a way that will allow _much easier_ adjustment, experimentation, and measurement in \"part 2\""
    ]
   },
   {
@@ -51,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "509a8b89",
    "metadata": {},
    "outputs": [
@@ -78,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "4787010c",
    "metadata": {},
    "outputs": [
@@ -186,7 +184,7 @@
        "4       4980.0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +201,7 @@
    "id": "ce2e06cf",
    "metadata": {},
    "source": [
-    "But that's not all --- at the end of this homework, we will be able to run a `dvc repro` command and all of our main models and results will be made available for your _notebook_ to open and display. "
+    "But that's not all --- at the end of this homework, we will be able to run a `dvc repro` command and all of our main models and results will be made available for your _notebook_ to open and display."
    ]
   },
   {
@@ -218,7 +216,7 @@
     "    - your \"lab notebook\", as an **`.ipynb` or `.md`** (e.g. jupytext), that will be exported to PDF for Canvas submission. **This communicates your _goals_**, along with the results that will be compared to them. \n",
     "    - your **`dvc.yaml`** file that will define  the inputs and outputs of your _approaches_. See [the DVC documentation](https://dvc.org/doc/user-guide/project-structure/pipelines-files) for information!\n",
     "    - **source code** and **scripts** that define the preprocessing and prediction `Pipeline`'s you wish to create. You may then _print_ the content of those scripts at the end of your notebook e.g. as appendices using \n",
-    "- any updates to `environment.yml` to add the dependencies you want to use for this homework\n"
+    "- any updates to `environment.yml` to add the dependencies you want to use for this homework"
    ]
   },
   {
@@ -248,7 +246,7 @@
     "\n",
     "Using only the `text` and `flavor_text` data, predict the color identity of cards: \n",
     "\n",
-    "Follow the sklearn documentation covered in class on text data and Pipelines to create a classifier that predicts which of the colors a card is identified as. \n",
+    "Follow the sklearn documentation covered in class on text data and [Pipelines](https://scikit-learn.org/stable/modules/compose.html#pipeline-chaining-estimators) to create a classifier that predicts which of the colors a card is identified as. \n",
     "You will need to preprocess the target _`color_identity`_ labels depending on the task: \n",
     "\n",
     "- Source code for pipelines\n",
@@ -259,9 +257,7 @@
     "- in your notebook: \n",
     "    - Describe:  preprocessing steps (the tokenization done, the ngram_range, etc.), and why. \n",
     "    - load both models and plot the _confusion matrix_ for each model ([see here for the multilabel-specific version](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.multilabel_confusion_matrix.html))\n",
-    "    - Describe: what are the models succeeding at? Where are they struggling? How do you propose addressing these weaknesses next time?\n",
-    "\n",
-    "\n"
+    "    - Describe: what are the models succeeding at? Where are they struggling? How do you propose addressing these weaknesses next time?"
    ]
   },
   {
@@ -280,19 +276,44 @@
     "    - What data did you use from the original dataset? How did you proprocess it? \n",
     "    - Can we see the importance of those features? e.g. logistic weights? \n",
     "    \n",
-    "How did you do? What would you like to try if you had more time? \n"
+    "How did you do? What would you like to try if you had more time?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05b56dbf",
+   "metadata": {},
+   "source": [
+    "## Part 4: Iteration, Measurement, & Validation \n",
+    "\n",
+    "> No model is perfect, and experimentation is key. How can we more easily iterate and validate our model? \n",
+    "\n",
+    "- Pick **ONE** of your models above (regression, multilabel, or multiclass) that you want to improve or investigate, and calculate metrics of interest for them to go beyond our confusion matrix/predicted-actual plots: \n",
+    "    - for multiclass, report average and F1\n",
+    "    - for multilabel, report an [appropriate metric](https://scikit-learn.org/stable/modules/model_evaluation.html#multilabel-ranking-metrics) (e.g. `ranking_loss`)\n",
+    "    - for regression, report an [appropriate metric](https://scikit-learn.org/stable/modules/model_evaluation.html#regression-metrics) (e.g. 'MAPE' or MSE), **OR** since these are *ranks*, the [pearson correlation](https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.pearsonr.html) between predicted and actual may be more appropriate?\n",
+    "- in the corresponding `dvc.yaml` stage for your model-of-interest, add `params` and `metrics`\n",
+    "    - under `params`, pick a setting in your preprocessing (e.g. the `TfidfVecorizer`) that you want to change to imrpove your results. Set that param to your current setting, and have your model read from a `params.yaml` rather than directly writing it in your code. [^1]\n",
+    "    - under `metrics`, reference your `metrics.json` and have your code _write_ the results as json to that file, rather than simply printing them or reporting them in the notebook. \n",
+    "- Run a _new experiment_ that \n",
+    "    \n",
+    "[^1]: in production or bigger projects, consider using [`hydra`](https://hydra.cc/), [`driconfig`](https://dribia.github.io/driconfig/), or others like them to help manage .yaml and .toml settings files even better. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5bf4b0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "> "
    ]
   }
  ],
  "metadata": {
   "jupytext": {
-   "formats": "ipynb,md:myst",
-   "text_representation": {
-    "extension": ".md",
-    "format_name": "myst",
-    "format_version": 0.13,
-    "jupytext_version": "1.11.5"
-   }
+   "formats": "ipynb,md:myst"
   },
   "kernelspec": {
    "display_name": "Python [conda env:text-data-class]",
@@ -309,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
