--- a/homework/hw2-goals-approaches/readme.ipynb
+++ b/homework/hw2-goals-approaches/readme.ipynb
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05b56dbf",
+   "id": "a9dbbf1c",
    "metadata": {},
    "source": [
     "## Part 4: Iteration, Measurement, & Validation \n",
@@ -295,20 +295,29 @@
     "- in the corresponding `dvc.yaml` stage for your model-of-interest, add `params` and `metrics`\n",
     "    - under `params`, pick a setting in your preprocessing (e.g. the `TfidfVecorizer`) that you want to change to imrpove your results. Set that param to your current setting, and have your model read from a `params.yaml` rather than directly writing it in your code. [^1]\n",
     "    - under `metrics`, reference your `metrics.json` and have your code _write_ the results as json to that file, rather than simply printing them or reporting them in the notebook. \n",
-    "- Run a _new experiment_ that \n",
+    "- commit your changes to your branch, run `dvc repro dvc.yaml` for your file, then run a _new experiment_ that changes that one parameter: e.g. `dvc exp run -S preprocessing.ngrams.largest=1` (see the `example/` folder for a complete working example). \n",
+    "\n",
+    "Report the improvement/reduction in performance with the parameter change for your metric, whether by copy-pasting or using `!dvc exp diff` in the notebook, the results of `dvc exp diff`. \n",
     "    \n",
     "[^1]: in production or bigger projects, consider using [`hydra`](https://hydra.cc/), [`driconfig`](https://dribia.github.io/driconfig/), or others like them to help manage .yaml and .toml settings files even better. "
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6a341f5a",
+   "metadata": {},
+   "source": [
+    "## Extra Credit (5 pts) \n",
+    "If you can, use a feature importance or model explanation technique like LIME to describe, _briefly_, why your model is behaving in the way it is. E.g. what spots in the text for a green card are leading to it's classification as _green_, or what features are useful to say what the regressor thinks the EDHREC Rank should be. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5bf4b0f",
+   "id": "0754fe65",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "> "
-   ]
+   "source": []
   }
  ],
  "metadata": {
