update pre-processing, add params

--- a/homework/hw2-goals-approaches/jwoodham/PS2.ipynb
+++ b/homework/hw2-goals-approaches/jwoodham/PS2.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 1,
    "id": "9aa660e6",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: Failed to remove '..\\..\\..\\..\\AppData\\Local\\Temp\\tmp9va2qqsxdvc-clone' - [WinError 32] The process cannot access the file because it is being used by another process: 'C:\\\\Users\\\\jeffw\\\\AppData\\\\Local\\\\Temp\\\\tmp9va2qqsxdvc-clone\\\\.git\\\\objects\\\\pack\\\\pack-efea317296d4076dd38c3137987d23a189d3989c.pack'\n"
+      "ERROR: failed to pull data from the cloud - unable to remove 'C:\\Users\\jeffw\\text-data-spr22\\homework\\hw2-goals-approaches\\jwoodham\\multilabel_model.pkl' without a confirmation. Use `-f` to force.\n",
+      "WARNING: Failed to remove '..\\..\\..\\..\\AppData\\Local\\Temp\\tmp0rlmts0vdvc-clone' - [WinError 32] The process cannot access the file because it is being used by another process: 'C:\\\\Users\\\\jeffw\\\\AppData\\\\Local\\\\Temp\\\\tmp0rlmts0vdvc-clone\\\\.git\\\\objects\\\\pack\\\\pack-efea317296d4076dd38c3137987d23a189d3989c.pack'\n"
      ]
     }
    ],
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 14,
    "id": "2acc23d1",
    "metadata": {},
    "outputs": [],
@@ -96,10 +97,12 @@
     "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
     "from sklearn.metrics import multilabel_confusion_matrix, ConfusionMatrixDisplay\n",
     "from sklearn.metrics import classification_report\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.preprocessing import MultiLabelBinarizer\n",
     "from nltk.tokenize import RegexpTokenizer\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.pipeline import make_pipeline\n",
     "import json"
    ]
   },
@@ -21237,7 +21240,7 @@
    "id": "5a345b59",
    "metadata": {},
    "source": [
-    "Looking at relative importance of themes over time, we see some severe spikes (probably due to just a small number of cards released on a given day - it is unlikely that 100% of cards released in a set would be related to one topic. We still see the importance of Balduvia with the release of the Ice Age set in 1995, and a rise in the frequency of theme 5 (Goblins) in the past couple of years. In order to account for variance in how cards are released (with some dates only having one card releaesd and others having over 1,000), it may be useful to look at the importance of themes by month rather than by date of release. It's also interesting the topic 1 (Balduvia) seems to be the only one related to a specific fictional setting - I wonder if this is because BERTopic missed the others, other settings simply aren't as prominent, or if BERTopic combined them all within a fantasy setting topic (rather than a Balduvia topic). "
+    "Looking at relative importance of themes over time, we see some severe spikes (probably due to just a small number of cards released on a given day - it is unlikely that 100% of cards released in a set would be related to one topic. We still see the importance of Balduvia with the release of the Ice Age set in 1995, and a rise in the frequency of theme 5 (Goblins) in the past couple of years. In order to account for variance in how cards are released (with some dates only having one card releaesd and others having over 1,000), it may be useful to look at the importance of themes by month rather than by date of release. It's also interesting the topic 1 (Balduvia) seems to be the only one related to a specific fictional setting - I wonder if this is because BERTopic missed the others, other settings simply aren't as prominent, or if BERTopic combined them all within a fantasy setting topic (rather than a Balduvia topic)."
    ]
   },
   {
@@ -21277,6 +21280,19 @@
     "\n",
     "mlobject = open('multilabel_model.pkl', 'rb')\n",
     "mlmodel = pickle.load(mlobject)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f500dc8",
+   "metadata": {},
+   "source": [
+    "### Pre-Processing\n",
+    "- Tokenize - using a regex expression that includes any set of characters that starts with a letter (following a word boundary) and is followed by one or more of a letter, apostrophe, or number, followed by a word boundary (so excluding punctuation besides contractions). This will get rid of punctuation and quotations marks (which there are many of) in the flavor text, as well as any mentions of mana costs and color, which I'm not interested in if I want to know how the narrative text reltaes to the classification. It will also exclude single-character words like \"I\" and \"a\", which don't add a lot (and will be removed by stopwords anyway). \n",
+    "\n",
+    "- N-gram - max n-gram is set to 2 to account for possible compound meanings (e.g. \"draw sword\", \"Ice Age\"). It may also help account for proper nouns/names, which I expect to be common in flavor text.\n",
+    "\n",
+    "- Stop words - remove English stop words - I expect most of the relationship between flavor text and color to be based on nouns tied to a specific setting (e.g. snow, trees, ocean), so I'm not too worried about losing basic verbs, contractions, general pronouns, prepositions. \n"
    ]
   },
   {
@@ -21572,7 +21588,7 @@
    "id": "7f940e34",
    "metadata": {},
    "source": [
-    "## Part 4: Iteration, Measurement, & Validation "
+    "## Part 4: Iteration, Measurement, & Validation"
    ]
   },
   {
@@ -21593,30 +21609,31 @@
     "\n",
     "Report the improvement/reduction in performance with the parameter change for your metric, whether by copy-pasting or using `!dvc exp diff` in the notebook, the results of `dvc exp diff`. \n",
     "    \n",
-    "[^1]: in production or bigger projects, consider using [`hydra`](https://hydra.cc/), [`driconfig`](https://dribia.github.io/driconfig/), or others like them to help manage .yaml and .toml settings files even better. "
+    "[^1]: in production or bigger projects, consider using [`hydra`](https://hydra.cc/), [`driconfig`](https://dribia.github.io/driconfig/), or others like them to help manage .yaml and .toml settings files even better."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
-   "id": "a509a1f2",
+   "execution_count": 22,
+   "id": "b9bc3910",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Micro F1:  0.9325264736544266\n",
-      "Macro F1:  0.9325095905076278\n",
-      "Weighted F1:  0.9325168329136694\n"
+      "Path          Metric     exp-6427a    workspace    Change\n",
+      "metrics.json  f1-score   0.76072      0.77695      0.016225\n",
+      "metrics.json  precision  0.76114      0.77798      0.016842\n",
+      "metrics.json  recall     0.76078      0.77698      0.016206\n",
+      "\n",
+      "Path         Param                     exp-6427a    workspace    Change\n",
+      "params.yaml  preprocessing.ngrams.max  1            2            1\n"
      ]
     }
    ],
    "source": [
-    "# F1 scores\n",
-    "micro_F1 = f1_score(y_true, y_pred, average='macro')\n",
-    "macro_F1 = f1_score(y_true, y_pred, average='micro')\n",
-    "weighted_F1 = f1_score(y_true, y_pred, average='weighted')"
+    "!dvc exp diff exp-6427a"
    ]
   },
   {
@@ -21625,7 +21642,67 @@
    "metadata": {},
    "source": [
     "## Extra Credit (5 pts) \n",
-    "If you can, use a feature importance or model explanation technique like LIME to describe, _briefly_, why your model is behaving in the way it is. E.g. what spots in the text for a green card are leading to it's classification as _green_, or what features are useful to say what the regressor thinks the EDHREC Rank should be. \n"
+    "If you can, use a feature importance or model explanation technique like LIME to describe, _briefly_, why your model is behaving in the way it is. E.g. what spots in the text for a green card are leading to it's classification as _green_, or what features are useful to say what the regressor thinks the EDHREC Rank should be."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "2c1ea501",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import lime\n",
+    "from lime import lime_text\n",
+    "\n",
+    "df = (pd.read_feather('../../../data/mtg.feather')\n",
+    "     ).dropna(subset=['flavor_text'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "fce3a9b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mlobject = open('multilabel_model.pkl', 'rb')\n",
+    "mlmodel = pickle.load(mlobject)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "86461494",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from lime.lime_text import LimeTextExplainer\n",
+    "explainer = LimeTextExplainer(class_names = mlmodel.classes_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "0030fec7",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "cannot use a string pattern on a bytes-like object",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [32]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m exp \u001b[38;5;241m=\u001b[39m \u001b[43mexplainer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexplain_instance\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolor_identity\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m17\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmlmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpredict\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_features\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m6\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\miniforge3\\envs\\text-data-class\\lib\\site-packages\\lime\\lime_text.py:409\u001b[0m, in \u001b[0;36mLimeTextExplainer.explain_instance\u001b[1;34m(self, text_instance, classifier_fn, labels, top_labels, num_features, num_samples, distance_metric, model_regressor)\u001b[0m\n\u001b[0;32m    368\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mexplain_instance\u001b[39m(\u001b[38;5;28mself\u001b[39m,\n\u001b[0;32m    369\u001b[0m                      text_instance,\n\u001b[0;32m    370\u001b[0m                      classifier_fn,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    375\u001b[0m                      distance_metric\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcosine\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m    376\u001b[0m                      model_regressor\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[0;32m    377\u001b[0m     \u001b[38;5;124;03m\"\"\"Generates explanations for a prediction.\u001b[39;00m\n\u001b[0;32m    378\u001b[0m \n\u001b[0;32m    379\u001b[0m \u001b[38;5;124;03m    First, we generate neighborhood data by randomly hiding features from\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    403\u001b[0m \u001b[38;5;124;03m        explanations.\u001b[39;00m\n\u001b[0;32m    404\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m    406\u001b[0m     indexed_string \u001b[38;5;241m=\u001b[39m (IndexedCharacters(\n\u001b[0;32m    407\u001b[0m         text_instance, bow\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbow, mask_string\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmask_string)\n\u001b[0;32m    408\u001b[0m                       \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mchar_level \u001b[38;5;28;01melse\u001b[39;00m\n\u001b[1;32m--> 409\u001b[0m                       \u001b[43mIndexedString\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtext_instance\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbow\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbow\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    410\u001b[0m \u001b[43m                                    \u001b[49m\u001b[43msplit_expression\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msplit_expression\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    411\u001b[0m \u001b[43m                                    \u001b[49m\u001b[43mmask_string\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmask_string\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[0;32m    412\u001b[0m     domain_mapper \u001b[38;5;241m=\u001b[39m TextDomainMapper(indexed_string)\n\u001b[0;32m    413\u001b[0m     data, yss, distances \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__data_labels_distances(\n\u001b[0;32m    414\u001b[0m         indexed_string, classifier_fn, num_samples,\n\u001b[0;32m    415\u001b[0m         distance_metric\u001b[38;5;241m=\u001b[39mdistance_metric)\n",
+      "File \u001b[1;32m~\\miniforge3\\envs\\text-data-class\\lib\\site-packages\\lime\\lime_text.py:114\u001b[0m, in \u001b[0;36mIndexedString.__init__\u001b[1;34m(self, raw_string, split_expression, bow, mask_string)\u001b[0m\n\u001b[0;32m    110\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    111\u001b[0m     \u001b[38;5;66;03m# with the split_expression as a non-capturing group (?:), we don't need to filter out\u001b[39;00m\n\u001b[0;32m    112\u001b[0m     \u001b[38;5;66;03m# the separator character from the split results.\u001b[39;00m\n\u001b[0;32m    113\u001b[0m     splitter \u001b[38;5;241m=\u001b[39m re\u001b[38;5;241m.\u001b[39mcompile(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m(\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m)|$\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m%\u001b[39m split_expression)\n\u001b[1;32m--> 114\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mas_list \u001b[38;5;241m=\u001b[39m [s \u001b[38;5;28;01mfor\u001b[39;00m s \u001b[38;5;129;01min\u001b[39;00m \u001b[43msplitter\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msplit\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mraw\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mif\u001b[39;00m s]\n\u001b[0;32m    115\u001b[0m     non_word \u001b[38;5;241m=\u001b[39m splitter\u001b[38;5;241m.\u001b[39mmatch\n\u001b[0;32m    117\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mas_np \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mas_list)\n",
+      "\u001b[1;31mTypeError\u001b[0m: cannot use a string pattern on a bytes-like object"
+     ]
+    }
+   ],
+   "source": [
+    "exp = explainer.explain_instance(df.color_identity[17], mlmodel.predict, num_features=6)"
    ]
   }
  ],
