--- a/homework/hw2-goals-approaches/hw2-ry/hw2-ry.ipynb
+++ b/homework/hw2-goals-approaches/hw2-ry/hw2-ry.ipynb
@@ -6140,9 +6140,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4b5fccd0",
+   "metadata": {},
+   "source": [
+    "## Part 4: Iteration, Measurement, & Validation \n",
+    "\n",
+    "> No model is perfect, and experimentation is key. How can we more easily iterate and validate our model? \n",
+    "\n",
+    "- Pick **ONE** of your models above (regression, multilabel, or multiclass) that you want to improve or investigate, and calculate metrics of interest for them to go beyond our confusion matrix/predicted-actual plots: \n",
+    "    - for multiclass, report average and F1\n",
+    "    - for multilabel, report an [appropriate metric](https://scikit-learn.org/stable/modules/model_evaluation.html#multilabel-ranking-metrics) (e.g. `ranking_loss`)\n",
+    "    - for regression, report an [appropriate metric](https://scikit-learn.org/stable/modules/model_evaluation.html#regression-metrics) (e.g. 'MAPE' or MSE), **OR** since these are *ranks*, the [pearson correlation](https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.pearsonr.html) between predicted and actual may be more appropriate?\n",
+    "- in the corresponding `dvc.yaml` stage for your model-of-interest, add `params` and `metrics`\n",
+    "    - under `params`, pick a setting in your preprocessing (e.g. the `TfidfVecorizer`) that you want to change to imrpove your results. Set that param to your current setting, and have your model read from a `params.yaml` rather than directly writing it in your code. [^1]\n",
+    "    - under `metrics`, reference your `metrics.json` and have your code _write_ the results as json to that file, rather than simply printing them or reporting them in the notebook. \n",
+    "- commit your changes to your branch, run `dvc repro dvc.yaml` for your file, then run a _new experiment_ that changes that one parameter: e.g. `dvc exp run -S preprocessing.ngrams.largest=1` (see the `example/` folder for a complete working example). \n",
+    "\n",
+    "Report the improvement/reduction in performance with the parameter change for your metric, whether by copy-pasting or using `!dvc exp diff` in the notebook, the results of `dvc exp diff`. \n",
+    "    \n",
+    "[^1]: in production or bigger projects, consider using [`hydra`](https://hydra.cc/), [`driconfig`](https://dribia.github.io/driconfig/), or others like them to help manage .yaml and .toml settings files even better. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "181fac30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4d368a6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#load multiclass_model\n",
+    "filename = 'multiclass_model.sav'\n",
+    "loaded_model = pickle.load(open(filename, 'rb'))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca811756",
+   "id": "d8dc84b3",
    "metadata": {},
    "outputs": [],
    "source": []
