question left with part4

--- a/homework/hw2-goals-approaches/hw2-ry/hw2-ry.ipynb
+++ b/homework/hw2-goals-approaches/hw2-ry/hw2-ry.ipynb
@@ -6141,7 +6141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b5fccd0",
+   "id": "ea407072",
    "metadata": {},
    "source": [
     "## Part 4: Iteration, Measurement, & Validation \n",
@@ -6163,31 +6163,131 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "181fac30",
+   "cell_type": "markdown",
+   "id": "084b237c",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pickle"
+    "For this part, I picked my multiclass label and report its average and F1 score. I honestly cannot understand why my dvc exp diff would not work here and why it is working using the dvc file from example data instead of the one i created. The F-1 score is relatively high, indicating that the model performed overall good."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "4d368a6b",
+   "execution_count": 13,
+   "id": "11fc7aa6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stages:\r\n",
+      "  topic-model:\r\n",
+      "    cmd: python topic_model.py ../../../data/mtg.feather\r\n",
+      "    deps:\r\n",
+      "    - ../../../data/mtg.feather\r\n",
+      "    - topic_model.py\r\n",
+      "    outs:\r\n",
+      "    - topic_model\r\n",
+      "  multilabel_model:\r\n",
+      "    cmd: '\" -d\" multilabel.py -d \"../../../data/mtg.feather -o\" multilabel_model.sav\r\n",
+      "      \" python\" multilabel.py ../../../data/mtg.feather'\r\n",
+      "  reg_model:\r\n",
+      "    cmd: python rank_model.py ../../../data/mtg.feather\r\n",
+      "    deps:\r\n",
+      "    - ../../../data/mtg.feather\r\n",
+      "    - rank_model.py\r\n",
+      "    outs:\r\n",
+      "    - reg_model.sav\r\n",
+      "\r\n",
+      "  multiclass_model:\r\n",
+      "    cmd: python multiclass.py ../../../data/mtg.feather\r\n",
+      "    deps:\r\n",
+      "    - ../../../data/mtg.feather\r\n",
+      "    - multiclass.py\r\n",
+      "    params:\r\n",
+      "    - tfidf.min_df\r\n",
+      "    - tfidf.max_df\r\n",
+      "    metrics:\r\n",
+      "    - metrics.json\r\n",
+      "      cache: false\r\n",
+      "    outs:\r\n",
+      "    - multilabel_model\r\n"
+     ]
+    }
+   ],
    "source": [
-    "#load multiclass_model\n",
-    "filename = 'multiclass_model.sav'\n",
-    "loaded_model = pickle.load(open(filename, 'rb'))"
+    "!cat dvc.yaml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "26a9ac77",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tfidf:\r\n",
+      "\ttfidf.min_df\r\n",
+      "\ttfidf.max_df\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cat params.yaml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7a7d1868",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"precision\":0.2767742028,\"recall\":0.2436828806,\"f1-score\":0.2196945148,\"support\":6332.0}"
+     ]
+    }
+   ],
+   "source": [
+    "%cat metrics.json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "6a8e6652",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Path                     Metric     HEAD     workspace    Change\n",
+      "../example/metrics.json  f1-score   0.79647  -            diff not supported\n",
+      "../example/metrics.json  precision  0.79656  -            diff not supported\n",
+      "../example/metrics.json  recall     0.79666  -            diff not supported\n",
+      "../example/metrics.json  support    2636     -            diff not supported\n",
+      "\n",
+      "Path                    Param                          HEAD    workspace    Change\n",
+      "../example/params.yaml  preprocessing.ngrams.largest   2       -            diff not supported\n",
+      "../example/params.yaml  preprocessing.ngrams.smallest  1       -            diff not supported\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "!dvc exp diff\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8dc84b3",
+   "id": "7625b53a",
    "metadata": {},
    "outputs": [],
    "source": []
