## Final commit after 2nd iteration
## Submitted the whole directory once after the 1st interation with n_gram range - (1,3). this is the second iteration commit with param changes(n_gram range-(1,1)).

--- a/HW3_Text_as_data.ipynb
+++ b/HW3_Text_as_data.ipynb
@@ -2,32 +2,51 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9eb7c220",
+   "id": "5dca36e2",
    "metadata": {},
    "source": [
     "### HW3_Text_as_Data_harshini_tammareddy_ht442"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "05a1c8e4",
+   "metadata": {},
+   "source": [
+    "showing dvc"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e10a84c",
+   "id": "6d83955c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %load dvc.yaml ## showing dvc\n",
+    "# %load dvc.yaml\n",
     "stages:\n",
     "  multiclass:\n",
     "    cmd: python multiclass.py\n",
     "    deps:\n",
-    "    - multiclass.py\n",
+    "      - multiclass.py\n",
     "    outs:\n",
-    "    - multiclass.sav\n",
+    "      - multiclass.sav\n",
     "    params:\n",
     "      - preprocessing.ngrams\n",
     "    metrics:\n",
-    "      - metrics.json:\n",
-    "          cache: false"
+    "      - metrics1.json\n",
+    "      - metrics2.json\n",
+    "      - metrics1_diff.json\n",
+    "      - metrics2_diff.json\n",
+    "         "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27380a6b",
+   "metadata": {},
+   "source": [
+    "showing parameters"
    ]
   },
   {
@@ -37,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %load params.yaml   ##showing parameters\n",
+    "# %load params.yaml\n",
     "preprocessing:\n",
     "  ngrams:\n",
     "    smallest: 1\n",
@@ -45,39 +64,97 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff1f9310",
+   "cell_type": "markdown",
+   "id": "b6017468",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "##weighted avgs\n",
-    "# %load metrics1.json\n",
-    "{\"precision\":0.7955873794,\"recall\":0.7955721679,\"f1-score\":0.7955209606,\"support\":6956.0}"
+    "weighted avgs"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db8eb96a",
+   "id": "2baa5679",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load metrics1.json\n",
+    "{\"precision\":0.6394760138,\"recall\":0.6250718804,\"f1-score\":0.6280919108,\"support\":6956.0}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b28d2c43",
+   "metadata": {},
+   "source": [
+    "macro avgs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d8aef3c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# %load metrics2.json\n",
-    "{\"precision\":0.7959241661,\"recall\":0.796255566,\"f1-score\":0.7960303301,\"support\":6956.0}"
+    "{\"precision\":0.6390002811,\"recall\":0.6243611931,\"f1-score\":0.6273180308,\"support\":6956.0}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "681412f7",
+   "metadata": {},
+   "source": [
+    "#### Diff in the metrics from previous iteration. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a18b8c7b",
+   "id": "8e4db8ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load metrics1_diff.json\n",
+    "{\"precision\":0.7955873794,\"recall\":0.7955721679,\"f1-score\":0.7955209606,\"support\":6956.0} \n",
+    "{\"precision\":0.6394760138,\"recall\":0.6250718804,\"f1-score\":0.6280919108,\"support\":6956.0}\n",
+    "Diff - {\"precision\":0.1561113656,\"recall\":0.1705002875,\"f1-score\":0.1674290498}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31b94824",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load metrics2_diff.json\n",
+    "\n",
+    "{\"precision\":0.7959241661,\"recall\":0.796255566,\"f1-score\":0.7960303301,\"support\":6956.0} \n",
+    "{\"precision\":0.6390002811,\"recall\":0.6243611931,\"f1-score\":0.6273180308,\"support\":6956.0}\n",
+    "Diff -{\"precision\":0.156923885,\"recall\":0.1718943729,\"f1-score\":0.1687122993} "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c0df2fa",
+   "metadata": {},
+   "source": [
+    "loading the model ## second interation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e20fafed",
    "metadata": {},
    "outputs": [],
    "source": [
     "# %load multiclass.py\n",
     "#!/usr/bin/env python\n",
     "\n",
-    "# In[2]:\n",
+    "# In[27]:\n",
     "\n",
     "\n",
     "##Dependencies\n",
@@ -97,7 +174,7 @@
     "import yaml\n",
     "\n",
     "\n",
-    "# In[2]:\n",
+    "# In[28]:\n",
     "\n",
     "\n",
     "##Loading data\n",
@@ -105,69 +182,69 @@
     "df\n",
     "\n",
     "\n",
-    "# In[3]:\n",
+    "# In[29]:\n",
     "\n",
     "\n",
     "df.shape #data exploration\n",
     "\n",
     "\n",
-    "# In[4]:\n",
+    "# In[30]:\n",
     "\n",
     "\n",
     "df.dtypes #data exploration\n",
     "\n",
     "\n",
-    "# In[5]:\n",
+    "# In[31]:\n",
     "\n",
     "\n",
     "df.isnull().any() #data exploration\n",
     "\n",
     "\n",
-    "# In[6]:\n",
+    "# In[32]:\n",
     "\n",
     "\n",
     "df.isnull().sum()  #data exploration\n",
     "\n",
     "\n",
-    "# In[7]:\n",
+    "# In[33]:\n",
     "\n",
     "\n",
     "df = df.dropna() #data exploration\n",
     "\n",
     "\n",
-    "# In[8]:\n",
+    "# In[34]:\n",
     "\n",
     "\n",
     "df.isnull().any() #data exploration\n",
     "\n",
     "\n",
-    "# In[9]:\n",
+    "# In[35]:\n",
     "\n",
     "\n",
     "df.shape #data exploration\n",
     "\n",
     "\n",
-    "# In[10]:\n",
+    "# In[36]:\n",
     "\n",
     "\n",
     "df['full_text'] = df['text'] + df['flavor_text'] ##preparing predictor variable\n",
     "\n",
     "\n",
-    "# In[11]:\n",
+    "# In[37]:\n",
     "\n",
     "\n",
     "x = df['full_text'].fillna('') #handling nulls\n",
     "x.isnull().any()\n",
     "\n",
     "\n",
-    "# In[12]:\n",
+    "# In[38]:\n",
     "\n",
     "\n",
     "y = df['color_identity'] ##defining y for multiclass \n",
     "y = [list(i)[0] if len(i) == 1 else -1 for i in y] ##-1 for more than one color\n",
     "\n",
     "\n",
-    "# In[13]:\n",
+    "# In[39]:\n",
     "\n",
     "\n",
     "# label_encoder object knows how to understand word labels.\n",
@@ -175,43 +252,43 @@
     "y = label_encoder.fit_transform(y)\n",
     "\n",
     "\n",
-    "# In[14]:\n",
+    "# In[40]:\n",
     "\n",
     "\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, y) ##splitting the data\n",
     "\n",
     "\n",
-    "# In[16]:\n",
+    "# In[41]:\n",
     "\n",
     "\n",
     "with open(\"params.yaml\", \"r\") as fd:\n",
     "    params = yaml.safe_load(fd)\n",
     "\n",
     "\n",
-    "# In[17]:\n",
+    "# In[42]:\n",
     "\n",
     "\n",
     "ngrams = params[\"preprocessing\"][\"ngrams\"]\n",
     "\n",
     "\n",
-    "# In[18]:\n",
+    "# In[43]:\n",
     "\n",
     "\n",
     "##model pipeline\n",
     "text_clf = Pipeline([\n",
-    "('vect', CountVectorizer(input='content',ngram_range=(ngrams[\"smallest\"], ngrams[\"largest\"]),max_df=25, min_df=5)), ##text preprocessing\n",
+    "('vect', CountVectorizer(input='content',ngram_range=(ngrams[\"smallest\"], ngrams[\"smallest\"]),max_df=25, min_df=5)), ##text preprocessing\n",
     "('tfidf', TfidfTransformer()), ##tfidf\n",
     "('clf', LinearSVC())]) #model\n",
     "\n",
     "\n",
-    "# In[19]:\n",
+    "# In[44]:\n",
     "\n",
     "\n",
     "#fitting the data\n",
     "text_clf.fit(x_train, y_train)\n",
     "\n",
     "\n",
-    "# In[20]:\n",
+    "# In[45]:\n",
     "\n",
     "\n",
     "pickle.dump(text_clf, open('multiclass.sav','wb')) #saving the model as object\n",
@@ -219,7 +296,7 @@
     "\n",
     "# #### Test data \n",
     "\n",
-    "# In[21]:\n",
+    "# In[46]:\n",
     "\n",
     "\n",
     "y_pred = text_clf.predict(x_test)\n",
@@ -227,29 +304,41 @@
     "\n",
     "# #### Mean Accuracy,Precision,Recall,F-Scores\n",
     "\n",
-    "# In[22]:\n",
+    "# In[47]:\n",
     "\n",
     "\n",
     "text_clf.score(x_test, y_test, sample_weight=None) ##mean accuracy\n",
     "\n",
     "\n",
-    "# In[24]:\n",
+    "# In[48]:\n",
     "\n",
     "\n",
     "metrics = pd.DataFrame(metrics.classification_report(y_test,y_pred,output_dict = True))\n",
     "metrics\n",
     "\n",
     "\n",
-    "# In[26]:\n",
+    "# In[49]:\n",
     "\n",
     "\n",
     "metrics[\"weighted avg\"].to_json(\"metrics1.json\") ##printing both the avgs\n",
     "\n",
     "\n",
-    "# In[27]:\n",
+    "# In[50]:\n",
     "\n",
     "\n",
     "metrics[\"macro avg\"].to_json(\"metrics2.json\") #macro avg\n",
+    "\n",
+    "\n",
+    "# In[ ]:\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# In[ ]:\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "# In[ ]:\n",
@@ -280,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "598652e3",
+   "id": "e51dfae7",
    "metadata": {},
    "outputs": [],
    "source": []
